fix: apply correction to SystemSafetyConstraint and Hazard update APIs and add code update support in all entities from step 1